Completed dynamic rendering of appointment data. Need to fix styling in AppointmentTypes.jsx. appointmnet-description and appointmnet-cta alignment is off. Need to implement mobile responsiveness on BookingLanding.jsx and AppointmentTypes.jsx, such that the elements display in a single column insted of side by side on mobile

--- a/frontend/src/calendar.css
+++ b/frontend/src/calendar.css
@@ -9,10 +9,15 @@
     justify-content: left;
 }
 
+.appointment-description{
+    width:100%
+}
+
 .appointment-cta{
     color:rgb(87, 76, 206);
     font-weight: bold;
-    width:35%
+    width:35%;
+    text-align: right;
 }
 
 .appointment-description-price{
@@ -160,7 +165,7 @@
 .left{
     width:35%;
     display: flex;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     flex-direction: column;
 }
